# resource-sentinel

./: Cargo.toml  Readme.md
src/: index.html  index.js  index.mjs  main.rs  style.css
