[package]
name = "resource-sentinel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.16", features = ["macros", "ws"] }
serde = "1.0.160"
serde_json = "1.0.96"
sysinfo = "0.28.4"
tokio = { version = "1.27.0", features = ["full"] }
tracing-subscriber = "0.3.17"
